// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasForm should render 1`] = `
<div>
  <div
    class="pf-v5-c-card pf-m-flat canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-log-1234"
              src=""
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            >
              log
            </h2>
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v5-c-toggle-group form-tabs"
          role="group"
        >
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="true"
                class="pf-v5-c-toggle-group__button pf-m-selected"
                id="Required"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Required
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="All"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  All
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="Modified"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Modified
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v5-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v5-c-text-input-group__text"
            >
              <span
                class="pf-v5-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v5-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <form
        autocomplete="new-password"
        class="pf-v5-c-form"
        data-testid="autoform"
        novalidate=""
      >
        <div>
          <div
            class="pf-v5-c-form__group"
            data-fieldname="message"
            data-testid="wrapper-field"
            group="common"
          >
            <div
              class="pf-v5-c-form__group-label"
            >
              <label
                class="pf-v5-c-form__label"
                for="uniforms-0000-0005"
              >
                <span
                  class="pf-v5-c-form__label-text"
                >
                  Message
                </span>
                <span
                  aria-hidden="true"
                  class="pf-v5-c-form__label-required"
                >
                   
                  *
                </span>
              </label>
               
              <div
                style="display: contents;"
              >
                <button
                  aria-disabled="false"
                  aria-label="More info for field"
                  class="pf-v5-c-button pf-m-plain field-hint-button"
                  data-ouia-component-id="OUIA-Generated-Button-plain-3"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  data-testid="field-hint-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="pf-v5-c-form__group-control"
            >
              <span
                class="pf-v5-c-form-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="uniforms text field"
                  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                  data-ouia-component-type="PF5/TextInput"
                  data-ouia-safe="true"
                  data-testid="text-field"
                  description="Sets the log message (uses simple language)"
                  group="common"
                  id="uniforms-0000-0005"
                  label="Message"
                  name="message"
                  type="text"
                  value="We got a one."
                />
              </span>
              <div
                class="pf-v5-c-form__helper-text"
              >
                <div
                  class="pf-v5-c-helper-text"
                >
                  <div
                    class="pf-v5-c-helper-text__item"
                  >
                    <span
                      class="pf-v5-c-helper-text__item-text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        data-testid="root-form-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema and no definition is available 1`] = `
<div>
  <div
    class="pf-v5-c-card pf-m-flat canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-4"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            >
              My Node
            </h2>
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-5"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v5-c-toggle-group form-tabs"
          role="group"
        >
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="true"
                class="pf-v5-c-toggle-group__button pf-m-selected"
                id="Required"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Required
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="All"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  All
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="Modified"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Modified
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v5-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v5-c-text-input-group__text"
            >
              <span
                class="pf-v5-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v5-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <div
        class="pf-v5-c-card"
        data-ouia-component-id="OUIA-Generated-Card-5"
        data-ouia-component-type="PF5/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v5-c-card__header"
        >
          <div
            class="pf-v5-c-card__header-main"
          >
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__body"
        >
          <div
            class="pf-v5-c-code-block"
          >
            <div
              class="pf-v5-c-code-block__content"
            >
              <pre
                class="pf-v5-c-code-block__pre"
              >
                <code
                  class="pf-v5-c-code-block__code"
                >
                  null

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__footer"
        >
          <div
            class="pf-v5-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-2"
            data-ouia-component-type="PF5/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v5-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v5-c-alert__title"
            >
              <span
                class="pf-v5-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v5-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema is available 1`] = `
<div>
  <div
    class="pf-v5-c-card pf-m-flat canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            />
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v5-c-toggle-group form-tabs"
          role="group"
        >
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="true"
                class="pf-v5-c-toggle-group__button pf-m-selected"
                id="Required"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Required
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="All"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  All
                </span>
              </button>
            </div>
          </div>
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-toggle-group__item"
            >
              <button
                aria-pressed="false"
                class="pf-v5-c-toggle-group__button"
                id="Modified"
                type="button"
              >
                <span
                  class="pf-v5-c-toggle-group__text"
                >
                  Modified
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v5-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v5-c-text-input-group__text"
            >
              <span
                class="pf-v5-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v5-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <div
        class="pf-v5-c-card"
        data-ouia-component-id="OUIA-Generated-Card-3"
        data-ouia-component-type="PF5/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v5-c-card__header"
        >
          <div
            class="pf-v5-c-card__header-main"
          >
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__body"
        >
          <div
            class="pf-v5-c-code-block"
          >
            <div
              class="pf-v5-c-code-block__content"
            >
              <pre
                class="pf-v5-c-code-block__pre"
              >
                <code
                  class="pf-v5-c-code-block__code"
                />
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__footer"
        >
          <div
            class="pf-v5-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-1"
            data-ouia-component-type="PF5/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v5-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v5-c-alert__title"
            >
              <span
                class="pf-v5-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v5-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
